[api, bot] бот через FastAPI и webhook

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
     volumes:
       - ./bot:/app
     command: ["python", "main.py"]
+    ports:
+      - "${API_PORT}:${API_PORT}"
 
   redis:
     image: redis:7
