--- a/bot/requirements.txt
+++ b/bot/requirements.txt
@@ -9,6 +9,8 @@ async-timeout==5.0.1
 asyncio==3.4.3
 attrs==24.2.0
 certifi==2024.8.30
+click==8.1.7
+fastapi==0.115.5
 frozenlist==1.5.0
 h11==0.14.0
 hiredis==3.0.0
@@ -24,5 +26,7 @@ python-dateutil==2.8.0
 redis==5.0.8
 six==1.16.0
 sniffio==1.3.1
+starlette==0.41.3
 typing_extensions==4.12.2
+uvicorn==0.32.1
 yarl==1.18.0
