--- a/bot/requirements.txt
+++ b/bot/requirements.txt
@@ -10,6 +10,7 @@ asyncio==3.4.3
 attrs==24.2.0
 certifi==2024.8.30
 click==8.1.7
+dacite==1.8.1
 fastapi==0.115.5
 frozenlist==1.5.0
 h11==0.14.0
@@ -22,6 +23,7 @@ multidict==6.1.0
 propcache==0.2.0
 pydantic==2.9.2
 pydantic_core==2.23.4
+PyJWT==2.10.1
 python-dateutil==2.8.0
 redis==5.0.8
 six==1.16.0
