[bot] форматирование сообщений

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,11 @@
 # Telegram Bot
-TELEGRAM_API_TOKEN=BOT_TOKEN
+TELEGRAM_API_TOKEN=TG_TOKEN
 
 # Redis
 REDIS_HOST=redis
 REDIS_PORT=6379
 
-# PostgreSQL
-POSTGRES_HOST=postgres
-POSTGRES_PORT=5432
-POSTGRES_DB=bot_db
-POSTGRES_USER=bot_user
-POSTGRES_PASSWORD=bot_password
-
-# API
+# API and WEB
 API_BASE_URL=https://test.vcc.uriit.ru/api
+WEB_BASE_URL=PUBLIC_HOST
+API_PORT=5001
