[api] нет моих больше сил этот API править

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Telegram Bot
-TELEGRAM_API_TOKEN=TG_TOKEN
+TELEGRAM_API_TOKEN=TOKEN
 
 # Redis
 REDIS_HOST=redis
@@ -7,5 +7,7 @@ REDIS_PORT=6379
 
 # API and WEB
 API_BASE_URL=https://test.vcc.uriit.ru/api
-WEB_BASE_URL=PUBLIC_HOST
+VCC_URL=https://test.vcc.uriit.ru
+WEB_BASE_URL=https://vcc-bot.cloudpub.ru
+FRONTEND_BASE_URL=https://azreil-ofd-hantanon1000t-16f2.twc1.net/
 API_PORT=5001
