--- a/bot/requirements.txt
+++ b/bot/requirements.txt
@@ -5,6 +5,7 @@ aiohttp==3.10.11
 aiosignal==1.3.1
 annotated-types==0.7.0
 anyio==4.6.2.post1
+arrow==1.3.0
 async-timeout==5.0.1
 asyncio==3.4.3
 attrs==24.2.0
@@ -17,6 +18,7 @@ h11==0.14.0
 hiredis==3.0.0
 httpcore==1.0.7
 httpx==0.27.2
+ics==0.7.2
 idna==3.10
 magic-filter==1.0.12
 multidict==6.1.0
@@ -29,6 +31,8 @@ redis==5.0.8
 six==1.16.0
 sniffio==1.3.1
 starlette==0.41.3
+TatSu==5.12.2
+types-python-dateutil==2.9.0.20241003
 typing_extensions==4.12.2
 uvicorn==0.32.1
 yarl==1.18.0
